# SeAMS

./: .~lock.Hints_Tips.doc#  Hints_Tips.doc  Licence_ReadMe.doc  README.md  README.md~
Accuracy/: AccuAssess.m
Classify/: ClusterCentroid.m
Classify/kmeans++/: kmeansxx.m  kxxGUI.fig  kxxGUI.m
MainMenu/: OBIAmainGUI.asv  OBIAmainGUI.fig  OBIAmainGUI.m  SeAMS.fig  SeAMS.m
SampleData/: Elevation_Percentile.asc.aux.xml  ExampleWorkflow.m  Shade.asc  Shade.prj  Slope.asc  Slope.asc.aux.xml
SegmentationOBIA/: SegmentationGUI.fig  SegmentationGUI.m
SegmentationOBIA/Cshed_seg/: Cshed.m
SegmentationOBIA/MeanShift/: msseg.m
SegmentationOBIA/SRM_C_CODE/libsrm-0.1/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake
SegmentationOBIA/SRM_C_CODE/libsrm-0.1/examples/: CMakeLists.txt  Makefile  cmake_install.cmake  image.c  stats.c  uf.c  video.c  video_sub.c  webcam.c
SegmentationOBIA/SRM_C_CODE/libsrm-0.1/lib/: CMakeLists.txt  Makefile  cmake_install.cmake  srm.c  srm.h
SegmentationOBIA/SRM_C_CODE/libsrm-0.1/python/: setup.py  srm.py
SegmentationOBIA/SRM_C_CODE/libsrm-0.1/python/examples/: pystats.cpp  stats.py
SegmentationOBIA/srm/: make_mex_for_srm.m  srm.m  srm2.m  srmGUI.fig  srmGUI.m  srm_boundarygradient.mexa64  srm_boundarylen.mexa64  srm_demo.m  srm_plot_segmentation.asv  weewee.jpg.aux.xml
Stats/: Ctextprops.m  GetSkewAndKurtosis.m  Histandcolorbar.m  ImageStats.fig  ImageStats.m  PositionSeg.m  SVC.fig  SVC.m  cotextureprops.m
Utilities/ImportAsciiRaster/: ImportAsciiRaster.m
Utilities/MatlabFns/: index.html
(+44 files in other folders)
